clusters/homelab/apps/tandem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandem-server
  namespace: tandem
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: tandem.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tandem-server
                port:
                  number: 80
  tls:
    - hosts:
        - tandem.tafu.casa
      secretName: tandem-server-tls
